Daniel fixes costs alignment on workshop page

--- a/frontend/css/jewelry-workshop-800plus.css
+++ b/frontend/css/jewelry-workshop-800plus.css
@@ -67,13 +67,27 @@ body {
 /* .li.sticky:hover {
   background-color: rgba(212, 199, 171, 0.925);
 } */
-.whatsapp-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+ 
+.contact-container {
+  display: grid;
+  grid-template-rows: 1fr;  
+  grid-template-columns: 1fr 1fr 1fr;
   margin-top: 1rem;
   width: 100%;
+  height: 5rem;
+
   /* border: 1px solid; */
+}
+
+.contact-block {
+  display: grid;
+  border-right: 1px solid;
+}
+
+.contact-block-last {
+  border: none;
+  padding: 0 8px 0px 8px;
+
 }
 
 .whatsapp-atr {
@@ -372,7 +386,8 @@ h1 {
 .workshop-costs {
   background-color: rgba(245, 245, 220, 0.9);
   box-shadow: 12px 2px 30px 2px rgb(168, 163, 154);
-  width: 60vw;
+  width: 75vw;
+  height: auto;
   font-size: 1.2rem;
   padding: 1rem;
   font-family: 'Raleway';
