--- a/frontend/css/jewelry-workshop-devices.css
+++ b/frontend/css/jewelry-workshop-devices.css
@@ -336,6 +336,7 @@ h1 {
 
 .workshop-costs {
   width: 65vw;
+  height: 35rem;
   font-size: 1.2rem;
   padding: 1rem;
   z-index: 3;
@@ -348,6 +349,40 @@ h1 {
   /* ~~~~ FOR DEBUGGING~~~~ */
   /* border: 2px solid rgb(37, 155, 228); */
 }
+
+.contact-container {
+  display: grid;
+  grid-template-rows: 30% 30% 30%;
+  grid-template-columns: 1fr;
+  margin-top: 1rem;
+  width: 100%;
+
+  /* border: 1px solid; */
+}
+
+.contact-block {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  border-bottom: 1px solid;
+  padding: 10px 0 1px 0;
+}
+
+.contact-block-last {
+  border: none;
+  padding: 10px 0 1px 0;
+}
+
+.whatsapp-svg {
+  width: 30px;
+  position: relative;
+  bottom: 2rem;
+}
+
+.whatsapp-atr {
+  text-decoration: none;
+}
+
+
 
 .go-to-top {
   position: relative;
